# backend/models.py
@@ -1,7 +1,6 @@
 from typing import List, Optional
 
 from sqlalchemy import DECIMAL, Date, Enum, ForeignKeyConstraint, Index, Integer, JSON, String, Text, text
-from sqlalchemy.dialects.mysql import LONGBLOB
 from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column, relationship
 import datetime
 import decimal
@@ -104,13 +103,12 @@ class Contratos(Base):
     fecha_fin: Mapped[datetime.date] = mapped_column(Date)
     numero_visitas_diarias: Mapped[int] = mapped_column(Integer)
     horario_visitas: Mapped[dict] = mapped_column(JSON)
-    pago_adelantado: Mapped[decimal.Decimal] = mapped_column(DECIMAL(10, 2))
-    pago_final: Mapped[decimal.Decimal] = mapped_column(DECIMAL(10, 2))
+    total: Mapped[decimal.Decimal] = mapped_column("Total", DECIMAL(10, 2))
+    pagado: Mapped[decimal.Decimal] = mapped_column("Pagado", DECIMAL(10, 2))
     id_cliente: Mapped[Optional[int]] = mapped_column(Integer)
-    estado_pago_adelantado: Mapped[Optional[str]] = mapped_column(Enum('Pendiente', 'Pagado'), server_default=text("'Pendiente'"))
-    estado_pago_final: Mapped[Optional[str]] = mapped_column(Enum('Pendiente', 'Pagado'), server_default=text("'Pendiente'"))
     observaciones: Mapped[Optional[str]] = mapped_column(Text)
-    factura: Mapped[Optional[bytes]] = mapped_column(LONGBLOB)
+    num_factura: Mapped[Optional[str]] = mapped_column(String(45))
+    num_total_visitas: Mapped[Optional[str]] = mapped_column(String(45))
 
     clientes: Mapped['Clientes'] = relationship('Clientes', back_populates='contratos')
     tarifas_contrato: Mapped[List['TarifasContrato']] = relationship('TarifasContrato', back_populates='contratos')
